# palloc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: build_and_test.yaml  build_and_test.yml  linting.yaml  linting.yml
analysis/: browser_template.html  button_template.html  experiment_template.html  generate_report.py  index_graph_button_template.html  multi_experiment_template.html  plot.py  progress_bar.py  run_experiment.py  template.html  test.py  test2.py
environments/: aalborg_env.json  aarhus_env.json  odense_env.json
include/: aggregated_result.hpp  assignment.hpp  constants.hpp  date_parser.hpp  environment.hpp  palloc.hpp  random.hpp  request.hpp  request_generator.hpp  result.hpp  scheduler.hpp  settings.hpp  simulator.hpp  trace.hpp  types.hpp  utils.hpp
preprocessing/: cowi_duration_distribution.py  fetch_map.py  generate_data.py  generate_environment.py
scripts/: bench.sh  compile.sh  linter.sh  memcheck.sh  run_experiment.sh  setup.sh
src/: CMakeLists.txt  aggregated_result.cpp  assignment.cpp  date_parser.cpp  environment.cpp  palloc.cpp  random.cpp  request.cpp  request_generator.cpp  result.cpp  scheduler.cpp  simulator.cpp  trace.cpp
tests/: CMakeLists.txt  generate_test_data.py  request_generator_test.cpp  scheduler_test.cpp  simulator_test.cpp
